<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSC207Project</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_flights">Flight Search</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="date">Departure Date</string>
    <string name="search">Search</string>
    <string name="title_activity_flight_results">Flight Results</string>
    <string name="title_activity_upload_flight">Upload Flight Info</string>
    <string name="upload_flight">Upload</string>
    <string name="sort_time">Sort by Travel Time</string>
    <string name="sort_cost">Sort by Cost</string>
    <string name="title_activity_search_itineraries">Search Itineraries</string>
    <string name="title_activity_itinerary_results">Select Itinerary to Book</string>
    <string name="title_activity_upload_client_info">Upload Client Info</string>
    <string name="upload_client">Upload</string>
    <string name="title_activity_client">Menu</string>
    <string name="title_activity_administrator">Menu</string>
    <string name="upload_clients">Upload Clients</string>
    <string name="edit_client">Edit Client</string>
    <string name="view_booked_itineraries">View Booked Itineraries</string>
    <string name="search_client_btn">Search Client</string>
    <string name="edit_flight">Edit Flight</string>
    <string name="search_edit_flights_btn">Search/Edit Flights</string>
    <string name="search_flights_btn">Search Flights</string>
    <string name="search_itineraries_btn">Search Itineraries</string>
    <string name="upload_flights_btn">Upload Flights</string>
    <string name="title_activity_search_client">Search Client</string>
    <string name="email_label">Email</string>
    <string name="search_label">Search</string>
    <string name="title_activity_client_search_result">Client</string>
    <string name="first_name_label">First Name</string>
    <string name="title_activity_booked_itineraries">Booked Itineraries</string>
    <string name="title_activity_debug">Debug</string>
    <string name="view_client_info">View Personal Information</string>
    <string name="title_activity_view_client">View Client</string>
    <string name="edit_client_switch">Edit</string>
    <string name="last_name_label">Last Name</string>
    <string name="address_label">Address</string>
    <string name="credit_card_number">Credit Card</string>
    <string name="expire_date_label">Expire Date</string>
    <string name="title_activity_client_user_info">Users Info</string>
    <string name="view_personal_info_label">View Personal Information</string>
    <string name="save_btn">Save</string>
    <string name="title_activity_user_info">Personal Information</string>
    <string name="edit_personal_information">Edit Personal information</string>
    <string name="edit_personal_billig_information">Edit Personal and Billing Information</string>
    <string name="title_activity_edit_flight_info">Edit Flight Information</string>
    <string name="flight_number">Flight number</string>
    <string name="airline">Airline</string>
    <string name="price">Price</string>
    <string name="numSeats">Number of seats</string>
    <string name="departure_date">Departure Date</string>
    <string name="departure_time">Departure time</string>
    <string name="arrival_date">Arrival date</string>
    <string name="arrival_time">Arrival time</string>
    <string name="title_activity_view_client_info">Personal Information</string>
    <string name="title_activity_edit_client_info">Personal Information</string>
    <string name="title_activity_view_admin_info">Personal Information</string>
    <string name="logout_btn">Logout</string>
    <string name="title_activity_list_clients_result">Select a client</string>
    <string name="all_clients_btn">List All Clients</string>
	<string name="back_main_screen_btn">Back to main screen</string>
	<string name="view_info">View Info</string>
	<string name="edit_info">Edit Info</string>
	<string name="email_address">Email Address</string>
	<string name="credit_card_expiry">Credit Card Expiry Date</string>
	<string name="departure_time_date">Departure Date and Time</string>
	<string name="arrival_time_date">Arrival Date and Time</string>
	<string name="search_results">Show Search Results</string>
	<string name="show_all_flights">Show All Flights</string>
	<string name="back_search">Back to Search</string>
	<string name="password">Password</string>
	<string name="client_file_path">Client file path</string>
	<string name="flight_file_path">Flight file path</string>
	<string name="departure">Departure</string>
	<string name="arrival">Arrival</string>
	<string name="cost">Cost</string>
	<string name="travel_time">Travel Time</string>
	<string name="itinerary_number">Itinerary number</string>
	<string name="overall_cost">Overall cost</string>
</resources>
