<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="#F8F8F8" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true" 
        android:layout_alignParentEnd="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_number"
                android:textSize="18sp"
                android:gravity="center" />

            <EditText
                android:id="@+id/flight_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
		        android:background="#fff"
		        android:minHeight="40dp" >

                <requestFocus android:layout_width="wrap_content" />

            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_time_date"
                android:textSize="18sp"
                android:gravity="center" />

            <DatePicker
                android:id="@+id/departure_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false" />

            <TimePicker
                android:id="@+id/departure_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arrival_time_date"
                android:textSize="18sp"
                android:gravity="center" />

            <DatePicker
                android:id="@+id/arrival_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false" />
            
            <TimePicker
                android:id="@+id/arrival_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/airline"
                android:textSize="18sp"
                android:gravity="center" />

            <EditText
                android:id="@+id/airline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="#fff"
		        android:minHeight="40dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textSize="18sp"
                android:gravity="center" />
           	
            <EditText
                android:id="@+id/origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="#fff"
		        android:minHeight="40dp" />
            
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="18sp"
                android:gravity="center" />
            
            <EditText
                android:id="@+id/destinatoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="#fff"
		        android:minHeight="40dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18sp"
                android:gravity="center" />
            
            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:background="#fff"
		        android:minHeight="40dp" />
            
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numSeats"
                android:textSize="18sp"
                android:gravity="center" />
            
            <EditText
                android:id="@+id/numSeats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="number"
                android:background="#fff"
		        android:minHeight="40dp"/>

        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_flight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="0.07"
            android:background="#2BBABD"
            android:onClick="editFlightInfo"
            android:text="@string/edit_flight"
            android:textColor="@drawable/button_text_color" />
    </LinearLayout>

</RelativeLayout>
